@@ -100,14 +100,9 @@ add_gem 'sendgrid' if prefer :email, 'sendgrid'
 
 ## Authentication (Devise)
 if prefer :authentication, 'devise'
-  case Rails::VERSION::MINOR.to_s
-  when "2"
-    add_gem 'devise', git: 'https://github.com/plataformatec/devise.git', branch: 'lm-rails-4-2'
-  else
     add_gem 'devise'
-  end
+    add_gem 'devise_invitable' if prefer :devise_modules, 'invitable'
 end
-add_gem 'devise_invitable' if prefer :devise_modules, 'invitable'
 
 ## Administratative Interface (Upmin)
 add_gem 'upmin-admin' if prefer :dashboard, 'upmin'
