@@ -1,5 +1,10 @@
 h1. CHANGELOG
 
+h3. 3.0.24 unreleased
+
+* restore 'rails_mailinglist_signup' example app for Rails 4.2
+* no need to specify GitHub source for Devise gem for Rails 4.2
+
 h3. 3.0.23 October 1, 2014
 
 * fix handling of optional hostname for PostgreSQL (closes #314)
